--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
-sqlalchemy
-psycopg2-binary
-openai
+flask==3.0.3
+sqlalchemy==2.0.32
+psycopg2-binary==2.9.9
+openai>=1.40.0
+gunicorn==23.0.0
+
 
